syntax = "proto3";

service SortingPriorityQueue {
  rpc GetNextItem(GetItemMessage) returns (ItemMessage) {}
}

message GetItemMessage {
}

message ItemMessage {
  bytes item = 1;
}
